adl-frontend/src/test/resources/unit/error/syntactic/attributes/attr1.adl
// attribute declaration in composite
composite attributes.attr1 {
  attribute uint8_t attr ;
}
